# core

./: .gitignore  config.ini  nod32-mirror.conf  pyproject.toml  test.txt
nod32_mirror/: __main__.py  _cli.py  _client.py  _config.py  _download.py  _key.py  _mirror.py  _parser.py  _tools.py  _translate.py  _versions.py  configspec.conf
nod32_mirror/langpacks/: en.json
