[tool.poetry]
name = "nod32-mirror"
version = "0.1.0"
description = ""
authors = ["marat2509 <marat2509@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.27.0"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
