[tool.poetry]
name = "nod32-mirror"
version = "0.1.0"
description = ""
authors = ["marat2509 <marat2509@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.27.0"
loguru = "^0.7.2"
click = "^8.1.7"
configobj = "^5.0.8"

[tool.poetry.scripts]
nod32-mirror = "nod32_mirror.__main__:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
